[package]
name = "tui-map"
version = "0.1.0"
edition = "2021"
description = "High-performance terminal map visualization using Braille Unicode"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
geo-types = "0.7"
geojson = "0.24"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"

[profile.release]
lto = true
codegen-units = 1
