[package]
name = "tui-map"
version = "0.1.0"
edition = "2021"
description = "High-performance terminal map visualization using Braille Unicode"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
geojson = "0.24"
anyhow = "1"
glam = "0.29"
rayon = "1.11.0"
simd-json = "0.17.0"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "hot_paths"
harness = false

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
